--- a/views/base.html
+++ b/views/base.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/vue.resource/1.0.3/vue-resource.min.js"></script>
+    <script src="/static/js/vue-resource.min.js"></script>
     <style>
 
     </style>
 </head>
+
 {% block main %} {% endblock %}
+
+<body>
+    <script src="/static/js/discoloration-nest.js"></script>
+</body>
 
 </html>
